--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,9 @@
             android:label="@string/title_filter_options"
             android:parentActivityName=".PartyKalauz"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:theme="@style/FullscreenTheme">
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="partykalauz.hu.partykalauz.PartyKalauz" />
